--- a/index.html
+++ b/index.html
@@ -51,6 +51,33 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="about-us">
+            <div class="container">
+                <div class="about-wrapper">
+                    <h5>Story about us</h5>
+                    <span class="strik"> <p></p></span>
+                    <span class="about-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    </span>
+                </div>
+            </div>
+            <div class="container-fluid d-flex justify-content-around">
+                <div class="row">
+                    <div class="product-item justify-content-center col-12 col-sm-6 col-md-4">
+                        <img src="./img/layer-44.jpg">
+                    </div>
+                    <div class="product-item justify-content-center col-12 col-sm-6 col-md-4">
+                        <img src="./img/layer-39.jpg">
+                    </div>
+                    <div class="product-item justify-content-center col-12 last col-sm-6 col-md-4">
+                        <img src="./img/layer-41.jpg">
+                    </div>
+                </div>
+            </div>
+                
+        </section>
+    </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
