--- a/index.html
+++ b/index.html
@@ -75,9 +75,59 @@
                     </div>
                 </div>
             </div>
-                
+        </section>
+        <section class="services">
+            <div class="container">
+                <div class="services-wrapper">
+                    <h5>Amazing Services</h5>
+                    <span class="strik"> <p></p></span>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="product-description col-md-3 mb-4 mt-4 col-sm-6">
+                        <img src="./img/alarm.png" alt="">
+                        <span>Photography</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                    <div class="product-description col-md-3 mb-4 mt-4 col-sm-6">
+                        <img src="./img/line-graph.png" alt="">
+                        <span>Web Design</span>
+                        <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                    <div class="product-description col-md-3 mb-4 mt-4 col-sm-6">
+                        <img src="./img/computer.png" alt="">
+                        <span>Creativity</span>
+                        <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid mt-4">
+                    <div class="row">
+                        <div class="product-description col-md-3 mb-4 mt-4 col-sm-6">
+                            <img src="./img/book.png" alt="">
+                            <span>seo</span>
+                            <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                        </div>
+                        <div class="product-description col-md-3 mb-4 mt-4 col-sm-6">
+                            <img src="./img/home.png" alt="">
+                            <span>Css/Html</span>
+                            <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+                        </div>
+                        <div class="product-description col-md-3 mb-4 mt-4 col-sm-6">
+                            <img src="./img/digital.png" alt="">
+                            <span>digital</span>
+                            <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-text">
+            <span>© 2017 MoGo free PSD template by <span class="autor">Laaqiq</span></span>
+        </div>
+    </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
